--- a/scss/main.css
+++ b/scss/main.css
@@ -695,9 +695,8 @@ button {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   position: relative;
   margin-top: 10vh;
   z-index: -2;
